--- a/index.html
+++ b/index.html
@@ -36,15 +36,20 @@ blah, blah, blah, blah
 
      <div data-role="page">
 	<div data-role="header">
-		<h1>My Hello World App!</h1>
+		<h1>Cold or Allergies</h1>
 	</div><!-- /header -->
 
 	<div data-role="content">	
-		<p>Hello World! (Your name) is here.</p>		
+		<p>Welcome to cold or allergy, a diagnostic quiz to determine whether you're having allergies or a cold. Read the disclaimer below.</p>		
 	</div><!-- /content -->
-
+		<a href="#pagetwo" data-role="button">Go to Page Two</a>
 	<div data-role="footer" data-position="fixed">
-		<p>This is the footer!</p>
+		<p>The following code has been developed by students and/or researchers of the Freshman Research Initiative DIY Diagnostics Stream at The University of Texas at Austin. This code is shared for demonstration purposes and should not be considered a product -- it is for entertainment purposes only. Any user of this code does so at their own risk. Members of the DIY Stream, FRI, and The University of Texas system are not liable for anything related to this code. THIS CODE SHOULD NOT BE USED TO DIAGNOSE ANY KIND OF MEDICAL CONDITION. 
+Authors in chronological order of contribution: Tim Riedel Atharva Joshi 
+Further Information: http://cns.utexas.edu/fri 
+Research Educator: Timothy Riedel triedel@utexas.edu 
+Brief Description of Goal of Code: To be familiarized with use of HTML5, CSS, Java, and Jquery. 
+Known Issues: Some of this stuff isnt entirely medically accurate, again this app is only for entertainment and coding i</p>
 	</div><!-- /footer -->
      </div><!-- /page -->
    </body>
